FIX: Fix vertical orientation whitespace issue

--- a/assets/css/common-styles.css
+++ b/assets/css/common-styles.css
@@ -22,6 +22,7 @@
 }
 
 .deensimc-marquee-track-wrapper {
+  max-height: 100%;
   display: flex;
   align-items: center;
   gap: var(--deensimc-item-gap);
